# blake3ruby

./: .gitignore  .rubocop.yml  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  blake3ruby.gemspec
.github/workflows/: main.yml
ext/blake3ruby/: Cargo.toml  extconf.rb
ext/blake3ruby/src/: lib.rs
lib/: blake3ruby.rb
lib/blake3ruby/: version.rb
sig/: blake3ruby.rbs
spec/: benchmark.rb  blake3ruby_spec.rb  spec_helper.rb
