[package]
name = "blake3ruby"
version = "0.2.0"
edition = "2021"
authors = ["Nightforge <modo00@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1" }
hex = { version = "0.4.3" }
blake3 = { version = "1.5.1" }

[package.metadata.magnus]
rbconfig = true
